# TierDrop

./: .dockerignore  .env.example  .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: docker-publish.yml
docker/: Dockerfile  docker-compose-nginx.yml  docker-compose.yml  docker-entrypoint.sh  nginx.conf
docker/certs/: fullchain.pem  privkey.pem
src/: app.rs  assets.rs  auth.rs  main.rs  permissions.rs  sse.rs  state.rs
src/routes/: backup.rs  controller.rs  dashboard.rs  health.rs  mod.rs  settings.rs
src/zt/: client.rs  mod.rs  models.rs  poller.rs
static/: qr.js  rule-compiler.js  style.css
templates/: base.html  dashboard.html  login.html  login_2fa.html  settings.html  setup.html
templates/controller/: network_detail.html
templates/controller/partials/: flow_rules.html  ip_pools.html  member_list.html  member_modal.html  member_row.html  network_settings.html
templates/partials/: 2fa_disable_modal.html  2fa_setup_modal.html  2fa_status.html  dashboard_networks.html  dashboard_stats.html  user_modal.html  users_list.html
