[package]
name = "tierdrop"
version = "1.0.0"
edition = "2021"
description = "A lightweight web dashboard for managing your ZeroTier networks"
authors = ["cinerieus"]
repository = "https://github.com/cinerieus/TierDrop"
license = "MIT"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["compression-full"] }
tower-sessions = "0.14"
tower-sessions-memory-store = "0.14"

askama = "0.14"
askama_web = { version = "0.14", features = ["axum-0.8"] }

reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

rust-embed = { version = "8", features = ["compression"] }
mime_guess = "2"

argon2 = "0.5"

futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }

dotenvy = "0.15"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

axum-extra = { version = "0.10", features = ["typed-header"] }
dirs = "6.0.0"

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
